welcome.lessons.welcome.variables.Variables.scala.error
Variables:4: error: overloaded method value avance with alternatives:
  (x$1: Int)Unit <and>
  ()Unit
 cannot be applied to (nbpas: Int)
	avance(nbpas=nbpas+1)
        ^